@startuml

title __MODEL's Class Diagram__\n

  namespace  {
    namespace baldr2.model {
      class kbaldr2.model.Appointment {
          - appointmentID : int
          - contactID : int
          - createdBy : String
          - customerID : int
          - description : String
          - endDateAndTime : LocalDateTime
          - location : String
          - startDateAndTime : LocalDateTime
          - startDateAndTimeFormatted : String
          - title : String
          - type : String
          - updatedBy : String
          - userID : int
          + Appointment()
          + getContactID()
          + getCreatedBy()
          + getCustomerID()
          + getDescription()
          + getEndDateAndTime()
          + getEndDateAndTimeFormatted()
          + getId()
          + getLocation()
          + getStartDateAndTime()
          + getStartDateAndTimeFormatted()
          + getTitle()
          + getType()
          + getUpdatedBy()
          + getUserID()
          + setAppointmentID()
          + setContactID()
          + setCreatedBy()
          + setCustomerID()
          + setDescription()
          + setEndDateAndTime()
          + setLocation()
          + setStartDateAndTime()
          + setTitle()
          + setType()
          + setUpdatedBy()
          + setUserID()
      }
    }
  }
  

  namespace  {
    namespace baldr2.model {
      class kbaldr2.model.Contact {
          - contactEmail : String
          - contactID : int
          - contactName : String
          + Contact()
          + getContactEmail()
          + getContactName()
          + getId()
          + setContactEmail()
          + setContactName()
      }
    }
  }
  

  namespace  {
    namespace baldr2.model {
      class kbaldr2.model.Customer {
          - address : String
          - createdBy : String
          - customerID : int
          - divisionID : int
          - name : String
          - phone : String
          - postalCode : String
          - updatedBy : String
          + Customer()
          + getAddress()
          + getCreatedBy()
          + getDivisionID()
          + getId()
          + getName()
          + getPhone()
          + getPostalCode()
          + getUpdatedBy()
          + setAddress()
          + setCreatedBy()
          + setCustomerID()
          + setDivisionID()
          + setName()
          + setPhone()
          + setPostalCode()
          + setUpdatedBy()
      }
    }
  }
  

  namespace  {
    namespace baldr2.model {
      abstract class kbaldr2.model.DataCache {
          {static} - allAppointments : ObservableList<DataCache>
          {static} - allContacts : ObservableList<DataCache>
          {static} - allCustomers : ObservableList<DataCache>
          {static} - allLocations : ObservableList<DataCache>
          {static} - allUsers : ObservableList<DataCache>
          {static} - userId : int
          {static} + addAppointment()
          {static} + addCustomer()
          {static} + clearObjects()
          {static} + getAllAppointments()
          {static} + getAllContacts()
          {static} + getAllCustomers()
          {static} + getAllLocations()
          {static} + getAllUsers()
          {static} + getContactID()
          {static} + getContactName()
          {static} + getCountryIDFromDivisionID()
          {static} + getCustomerID()
          {static} + getCustomerName()
          {static} + getDivisionName()
          {static} + getFirstDivisionID()
          {abstract} + getId()
          {static} + getUserID()
          {static} + setAllAppointments()
          {static} + setAllContacts()
          {static} + setAllCustomers()
          {static} + setAllLocations()
          {static} + setAllUsers()
          {static} + setUserId()
      }
    }
  }
  

  namespace  {
    namespace baldr2.model {
      class kbaldr2.model.Location {
          {static} - ca : ObservableList<String>
          - countryID : int
          - countryName : String
          - divisionID : int
          - divisionName : String
          {static} - uk : ObservableList<String>
          {static} - us : ObservableList<String>
          + Location()
          {static} + getCa()
          + getCountryID()
          + getDivisionName()
          + getId()
          {static} + getUk()
          {static} + getUs()
          - addToList()
      }
    }
  }
  

  namespace  {
    namespace baldr2.model {
      class kbaldr2.model.User {
          - userID : int
          - userName : String
          + User()
          + getId()
          + getUserName()
      }
    }
  }
  

  kbaldr2.model.Appointment -up-|> kbaldr2.model.DataCache
  kbaldr2.model.Contact -up-|> kbaldr2.model.DataCache
  kbaldr2.model.Customer -up-|> kbaldr2.model.DataCache
  kbaldr2.model.Location -up-|> kbaldr2.model.DataCache
  kbaldr2.model.User -up-|> kbaldr2.model.DataCache


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
